--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   permission_handler: ^10.3.0
   sqflite: ^2.0.0
   path: ^1.8.0
+  qr_code_scanner: ^1.0.1
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
@@ -22,6 +23,15 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.9.2
 
 flutter:
   uses-material-design: true
+
+  assets:
+  - assets/icon.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
