--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   sqflite: ^2.0.0
   path: ^1.8.0
   qr_code_scanner: ^1.0.1
+  flutter_email_sender: ^5.0.2
+  intl: ^0.19.0
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
