--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,12 @@ dependencies:
   permission_handler: ^10.3.0
   sqflite: ^2.0.0
   path: ^1.8.0
+  path_provider: ^2.1.2
   qr_code_scanner: ^1.0.1
   flutter_email_sender: ^5.0.2
   intl: ^0.19.0
+  device_info_plus: ^9.1.2
+  csv: ^6.0.0
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
